# jarvis-assistant

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/desktop/: .prettierignore  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.tsx  autostart.ts  main.tsx  settings-state.ts  shortcuts.ts  single-flight.ts  types.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.production.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/tests/: activity-page.test.tsx  assistant-page.test.tsx  autostart.test.ts  client-tauri.test.ts  client.test.ts  confirmation-card.test.tsx  normalizers.test.ts  settings-pages.test.tsx  settings-state.test.ts  (+5 more)
docs/: ARCHITECTURE.md  PROVIDERS.md  SECURITY.md  TOOLS.md  TROUBLESHOOTING.md
scripts/: build.ps1  dev.ps1  install-piper.ps1  install-wake-model.ps1  jarvis-assistant.spec  run-backend.ps1  setup.ps1  test.ps1  windows-toolchain.ps1
services/assistant/: README.md  pyproject.toml
services/assistant/config/: development.json  production.json  tool-permission-defaults.json
services/assistant/src/jarvis_assistant/: __init__.py  __main__.py  api.py  application_aliases.py  audio.py  cancellation.py  config.py  confirmations.py  data_cleanup.py  events.py  known_folders.py  logging_config.py  main.py  memory.py  models.py  orchestrator.py  parent_watchdog.py  permissions.py  powershell.py  process_io.py  runtime.py  secrets_store.py  single_instance.py  state.py
services/assistant/src/jarvis_assistant/providers/: __init__.py  base.py  deepgram.py  gemini.py  mock.py  openwakeword.py  piper.py  willow.py
services/assistant/src/jarvis_assistant/tools/: __init__.py  base.py  desktop.py  files.py  registry.py  safe_paths.py  system.py  windows.py  windows_file_ops.py
services/assistant/tests/: conftest.py  test_api.py  test_backend_control_fixes.py  test_backend_final_hardening.py  test_config.py  test_deepgram_and_willow.py  test_gemini.py  test_hardening.py  test_logging.py  test_memory.py  test_orchestrator.py  test_permissions_and_confirmations.py  test_powershell.py  test_process_security.py  test_readiness.py  test_shared_contracts.py  test_state_and_cancellation.py  test_tools.py  test_wake_packaging.py  test_windows_file_handles.py
shared/schemas/: activity.schema.json  protocol.schema.json  settings.schema.json  tool.schema.json
shared/types/: index.ts  protocol.ts  settings.ts
(+17 files in other folders)
