[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "Local, safety-gated Windows assistant backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115,<1",
  "google-genai>=1.0,<2; platform_machine != 'ARM64' and platform_machine != 'aarch64'",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "uvicorn[standard]>=0.32,<1",
  "websockets>=13,<16",
]

[project.optional-dependencies]
audio = ["numpy>=1.26,<3", "sounddevice>=0.5,<1"]
wake = ["openwakeword>=0.6,<1", "onnxruntime>=1.19,<2"]
wakeword = ["openwakeword>=0.6,<1", "onnxruntime>=1.19,<2"]
windows = [
  "numpy>=1.26,<3",
  "Pillow>=11,<13",
  "psutil>=6,<8",
  "pycaw>=20240210",
  "pywin32>=308",
  "sounddevice>=0.5,<1",
  "uiautomation>=2.0,<3",
]
secrets = ["keyring>=25,<26"]
dev = [
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[project.scripts]
jarvis-assistant = "jarvis_assistant.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_assistant"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".test-*", "pytest-cache-files-*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S104", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
